refit button and font size for win message to prevent button from spilling out of the div.

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,29 @@
   transition: all 0.2s ease-in-out;
 }
 
+.reset-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.reset-button-container button {
+  color: white;
+  background-color: #c02626;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 18px;
+  transition: all 0.2s ease-in-out;
+  max-width: 100%;
+}
+
+.reset-button-container button:hover {
+  background-color: #ff2f2f;
+  box-shadow: 1px 1px 3px #ff2f2f;
+}
+
 button:hover {
   box-shadow: 1px 1px #ff2f2f, 2px 2px #ff2f2f, 3px 3px #ff2f2f;
   transform: translateX(-3px);
@@ -97,7 +120,7 @@ button:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgb(0, 0, 0, 0.8);
-  font-size: 90px;
+  font-size: 60px;
   padding: 20px;
   height: 40%;
   width: 40%;
@@ -132,8 +155,8 @@ button:hover {
   }
 
   .winner-message{
-    font-size: 50px;
-    height: 40%;
+    font-size: 70px;
+    height: 60%;
     width: 60%;
   }
 }
